@@ -15,11 +15,14 @@ import org.json.JSONObject;
 import org.meandre.core.engine.Conductor;
 import org.meandre.core.engine.ConductorException;
 import org.meandre.core.engine.Executor;
+import org.meandre.core.engine.MrProbe;
+import org.meandre.core.engine.probes.StatisticsProbeImpl;
 import org.meandre.core.store.Store;
 import org.meandre.core.store.repository.CorruptedDescriptionException;
 import org.meandre.core.store.repository.FlowDescription;
 import org.meandre.core.store.repository.QueryableRepository;
 import org.meandre.core.utils.Constants;
+import org.meandre.webservices.utils.WSLoggerFactory;
 import org.meandre.webui.WebUI;
 import org.meandre.webui.WebUIFactory;
 
@@ -45,6 +48,11 @@ public class WSExecuteLogic {
 			HttpServletResponse response) throws IOException,
 			CorruptedDescriptionException, ConductorException {
 		String sURI = request.getParameter("uri");
+		boolean bStats = false;
+		String sStats = request.getParameter("statistics");
+		if ( sStats!=null ) {
+			bStats = sStats.equals("true");
+		}
 		
 		if ( sURI==null ) {
 			response.sendError(HttpServletResponse.SC_BAD_REQUEST);
@@ -87,10 +95,17 @@ public class WSExecuteLogic {
 				// Redirecting the output
 				PrintStream psOUT = System.out;
 				PrintStream psERR = System.err;
-
-				try {
-					exec = conductor.buildExecutor(qr, resURI);
+				StatisticsProbeImpl spi = null;
 				
+				try {
+					if ( !bStats )
+						exec = conductor.buildExecutor(qr, resURI);
+					else {
+						spi = new StatisticsProbeImpl();
+						MrProbe mrProbe = new MrProbe(WSLoggerFactory.getWSLogger(),spi,false,false);
+						exec = conductor.buildExecutor(qr, resURI, mrProbe);
+					}
+					
 					pw.flush();
 					
 					
@@ -156,6 +171,40 @@ public class WSExecuteLogic {
 					pw.println();
 					pw.println(te);
 					pw.flush();
+				}
+				
+				if ( bStats ) {
+					try {
+						JSONObject jsonStats = spi.getSerializedStatistics();
+						pw.println("----------------------------------------------------------------------------");
+						pw.println();
+						pw.println("Flow execution statistics");
+						pw.println();
+						pw.println("Flow unique execution ID :"+jsonStats.get("flow_unique_id"));
+						pw.println("Flow state               :"+jsonStats.get("flow_state"));
+						pw.println("Started at               :"+jsonStats.get("started_at"));
+						pw.println("Last update              :"+jsonStats.get("latest_probe_at"));
+						pw.println("Total run time (ms)      :"+jsonStats.get("runtime"));
+						pw.println();
+						pw.flush();
+						
+						JSONArray jaEXIS = (JSONArray) jsonStats.get("executable_components_statistics");
+						for ( int i=0,iMax=jaEXIS.length() ; i<iMax ; i++ ) {
+							JSONObject joEXIS = (JSONObject) jaEXIS.get(i);
+							pw.println("\tExecutable components instance ID          :"+joEXIS.get("executable_component_instance_id"));
+							pw.println("\tExecutable components state                :"+joEXIS.get("executable_component_state"));
+							pw.println("\tTimes the executable components fired      :"+joEXIS.get("times_fired"));
+							pw.println("\tAccumulated executable components run time :"+joEXIS.get("accumulated_runtime"));
+							pw.println("\tPieces of data pulled                      :"+joEXIS.get("pieces_of_data_in"));
+							pw.println("\tPieces of data pushed                      :"+joEXIS.get("pieces_of_data_out"));
+							pw.println("\tNumber of properties read                  :"+joEXIS.get("number_of_read_properties"));
+							pw.println();
+						}
+						pw.flush();
+					}
+					catch ( Exception e ) {
+						WSLoggerFactory.getWSLogger().warning("This exception should have never been thrown\n"+e);
+					}
 				}
 				
 				// Reset the output redirection
